Bug fix for WP 3.5 z-index on WYSIWYG / media upload
http://support.advancedcustomfields.com/discussion/4189/media-uploader-displays-behind-wysiwyg-editor-when-in-full-screen

--- a/css/input.css
+++ b/css/input.css
@@ -197,6 +197,15 @@
 }
 
 
+/*
+*  WP 3.5 z-index fix for full screen wysiwyg
+*/
+
+#mce_fullscreen_container {
+	z-index: 150005 !important;
+}
+
+
 /*---------------------------------------------------------------------------------------------
 *
 *  Field: Image
